<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roh28.reminder.TaskListActivity"
    android:rowCount="5"
    android:columnCount="1"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include layout="@layout/toolbar_main"
        android:id="@+id/toolbar"
        android:layout_row="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/reminderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminderTitle"
        android:layout_row="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="2">
        <EditText
            android:id="@+id/task"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:hint="@string/addTask"
            android:paddingLeft="5dp"
            android:ems="15"/>
        <Button android:id="@+id/taskAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTask"
            android:layout_gravity="right"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="onTaskAdd"
            android:visibility="gone"/>
        <Button android:id="@+id/taskUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateTask"
            android:layout_gravity="right"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="onTaskUpdate"
            android:visibility="gone"/>
    </LinearLayout>

    <ListView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="top"
        android:layout_row="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/addReminder"
        android:layout_gravity="bottom"
        android:layout_row="4"
        android:onClick="onAddReminder"/>
</GridLayout>
