<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roh28.reminder.ReminderActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_location"
        android:text="@string/location"
        android:padding="10dp"
        android:textSize="18sp"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_date"
        android:text="@string/dueDate"
        android:padding="10dp"
        android:textSize="18sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:visibility="gone" android:paddingTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingBottom="5dp">
                        <TextView
                            android:id="@+id/radiusLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/proximityRadius"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/radius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="10dp"/>
                    </LinearLayout>
                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="5280"
                        android:progress="1"
                        android:min="0"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/wallet_dim_foreground_disabled_holo_dark">
                    <fragment
                        android:id="@+id/place_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
                </LinearLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/locationView"
                    android:layout_width="match_parent"
                    android:layout_height="480dp"  />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:visibility="gone">

                <DatePicker
                    android:id="@+id/dp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:theme="@android:style/Widget.Holo.DatePicker" />

                <TimePicker
                    android:id="@+id/tp_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
